# libgp

./: .gitignore  CMakeLists.txt
examples/: CMakeLists.txt  gp_example_dense.cc  gp_lo_test.cc  gp_lo_train.cc
include/: cov.h  cov_linear_ard.h  cov_se_ard.h  gp.h  sampleset.h
src/: gp.cc  rprop.cc
